--- a/MFC_learn/MFC_learn.vcxproj.filters
+++ b/MFC_learn/MFC_learn.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="LoginDlg.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="RgsterDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFC_learn.cpp">
@@ -99,6 +102,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="LoginDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="RgsterDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
